2003-05-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/tmeter.tcl (make_scale_window,
	hide_loading_message, sn_loading_message): Remove
	some pointless catch calls.

2003-05-15  John Lash  <jlash@speakeasy.net>

	* gui/tmeter.tcl (sn_loading_message):
	Remove raise call from gui/tmeter.tcl. This eliminates
	a repeated two second pause during the initial
	loading screen. The problem has been seen using both
	gnome and kde desktops and is a bug in the respective
	window managers.

2003-05-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cobol/skeleton.c (main):
	* parsers/fortran/ftnchek.c (main):
	* parsers/java/skeleton.c (main):
	* parsers/tcl/skeleton.c (main):
	* parsers/toolbox/snptools.c (sn_process_options):
	Check to make sure the file name passed as
	the -y argument actually exists. This avoids
	a problem where a typo in the file name
	generates a usage message.

2003-05-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_create_new_project): Check each
	import directory to see if it exists and generate
	an error if it does not. This avoids a problem
	where a typo in a directory name will create
	an empty project instead of telling you that the
	import dir does not exist.

2003-05-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* etc/sn_prop.cfg.in: Remove empty -brow_switch
	from fortran parser config. Remove *.am from
	commented out elf parser since this extension
	is covered by the others rule. Remove -high_cmd
	and -high_switch from the c, c++, java, tcl,
	chill, and python configurations since these
	languages have built-in syntax highlighters.
	Remove -high_cmd and -high_switch from the
	asm, m4, and php configurations since these
	parsers do not support highlighting.

2003-05-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/dbutils.c (search_for_symbol):
	* parsers/common/parser.c (put_cross_ref):
	Fixup some questionable uses of the ternary
	operator. Pass "" instead of NULL to copystrings